--- a/src/components/pages/insurance/Insurance.css
+++ b/src/components/pages/insurance/Insurance.css
@@ -55,3 +55,25 @@
 .buttonCluster button:active {
   background-color: #777;
 }
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+  color: #666;
+  height: 100px;
+  animation: pulse 1.5s ease-in-out infinite;
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
